[project]
name = "relevant-xkcd-post"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=24.10.0",
    "duckdb==1.1.3",
    "einops>=0.8.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "polars>=1.16.0",
    "torch==2.5.1",
    "transformers==4.46.3",
]
